Work on header overlap issues

--- a/ukbg/theme/static/bootstrap-3.3.5/less/siguv-responsive-old.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/siguv-responsive-old.less
@@ -554,7 +554,7 @@ and (orientation:portrait) {
     	height: 285px;  
 	}
 }
-@media (max-width: 768px) {
+@media (max-width: 979px) {
   .lupegrau {
     top: -70px;
   }
